Feat: Implement STAC filter extension